Fixed an issue with horizontal scroll
Added overflow-x hidden to the body to prevent out of bounds elements to cause horizontal scrolling
Added a scrollbar-width: thin on every scrollbar purely for aesthetic reasons.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,12 @@ body, #root {
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden;
+}
+
+*{
+    scrollbar-width: thin;
+    scrollbar-color: grey transparent;
 }
 
 .head-link::after {
